fix z-index

--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,7 @@ h2 {
   height: 100%;
   background: linear-gradient(135deg, #1e1e1e, #333);
   color: #fff;
-  z-index: 10000;
+  z-index: 500;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -327,7 +327,7 @@ h2 {
 
 /* Modal styling */
 .modal {
-  display: none; /* Hidden by default */
+  /*! display: none; */ /* Hidden by default */
   position: fixed; 
   z-index: 9999; 
   left: 0; 
